resources/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      dnsConfig:
        nameservers:
        - 10.43.0.10
      dnsPolicy: None
      containers:
      - name: prowlarr
        image: ghcr.io/linuxserver/prowlarr:1.28.2.4885-ls98
        imagePullPolicy: IfNotPresent
        ports:
        - name: prowlarr
          containerPort: 9696
        volumeMounts:
        - name: prowlarr
          mountPath: /config
        resources:
          limits:
            memory: 700Mi
          requests:
            memory: 350Mi
        readinessProbe:
          tcpSocket:
            port: prowlarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: prowlarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: prowlarr
        persistentVolumeClaim:
          claimName: prowlarr
      - name: prowlarr-config
        secret:
          secretName: prowlarr-config
