resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: prowlarr
  selector:
    app: prowlarr
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app: postgres
